@@ -65,6 +65,7 @@ nobase_dist_pkgdata_DATA = \
 	upgrades/poker.bot/1.0.11-1.0.12.xsl \
 	upgrades/poker.client/1.0.5-1.0.6.xsl \
 	upgrades/poker.client/1.0.11-1.0.12.xsl \
+	upgrades/poker.client/1.0.12-1.0.13.xsl \
 	upgrades/poker.server/1.0.5-1.0.6.xsl \
 	upgrades/poker.server/1.0.11-1.0.12.xsl
 
