@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+
+<xsl:stylesheet version="1.0"
+                xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+
+ <xsl:preserve-space elements="*" />
+ <xsl:output method="xml" indent="yes"
+	     encoding="ISO-8859-1"
+ />
+
+ <!-- sit delay is no longer needed  -->
+ <xsl:template match="/settings/delays/@sit" />
+ 
+ <!-- copy the rest verbatim -->
+ <xsl:template match="@*|node()">
+  <xsl:copy>
+   <xsl:apply-templates select="@*|node()"/>
+  </xsl:copy>
+ </xsl:template>
+
+</xsl:stylesheet>
